# terminal_app

./: .gitignore  pyproject.toml  requirements.txt  setup.py  terminal_app.code-workspace
future/: document_transformer.py
terminal_app/: __init__.py
terminal_app/base/: __init__.py  base_options.py
terminal_app/core/: __init__.py  chat_saver.py  color.py  colorize.py  cycle_functions.py  document_transformer.py  stdout_decoration.py
terminal_app/curlify/: __init__.py  curlify.py
terminal_app/decorator/: coroutine.py  safety_call.py  set_params.py
terminal_app/decorators/: __init__.py  class_property.py  classproperty.py  safety_call.py
terminal_app/env/: __init__.py  env.py  plugin.py  verify_ssl_certificate.py
terminal_app/file_manager/: file_manager.py
terminal_app/formatting/: __init__.py  formatting.py
terminal_app/func/: __init__.py  get_params.py
terminal_app/log/: log.py
terminal_app/log/tests/: tests.py
terminal_app/logging/: logging.py
terminal_app/logging/tests/: tests.py
terminal_app/naming/: naming.py
terminal_app/ssh/: __init__.py  remote_connect.py
terminal_app/tests/: run.py
terminal_app/trush/: chat_saver.py
terminal_app/types/: __init__.py  all_params.py  chunks.py  random.py
tests/: .terminal_app.env  _settings.py  test_all_params.py  test_base_options.py  test_colorize.py  test_config.ipynb  test_config.py  test_curl.py  test_file_manager.py  test_func.py  test_logging.py  test_remote.py
tests/configs/development/: .terminal.env  (+2 more)
tests/test_conf/: .terminal_app.env  __main__.py  test_config.ipynb  test_config.py
(+6 files in other folders)
